# product-service

./: .gitignore  README.md  dump.rdb  pyproject.toml
alembic/: env.py
alembic/versions/: efa7866137bc_initial_migration.py
app/: main.py
app/api/controllers/: products.py
app/api/dependencies/: database.py
app/api/services/: products.py
app/controllers/: products.py
app/core/: abc.py  config.py  events.py
app/core/settings/: app.py  base.py  dev.py  prod.py
app/db/: events.py
app/db/repositories/: products.py
app/models/: domain.py  schemas.py
