[tool.poetry]
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
starlite = "^1.47.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"
flake8 = "^6.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
